--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ html {
 }
 
 img.Logo {
-    width: 23rem;
+    width: 18.8rem;
     height: auto;
-    margin: 1rem 40% .1rem;
+    margin: 1rem 35% .1rem;
     object-fit: contain;
 }
 
@@ -91,8 +91,9 @@ img.Logo {
 
 .Rectangle-5 {
     display: flex;
-    margin-left: 4rem;
+    margin-left: 1rem;
     margin-bottom: 3rem;
+    text-align: center;
     /* margin-top: 100rem; */
 }
 
@@ -139,7 +140,7 @@ img.Logo {
     font-style: normal;
     line-height: 1.43;
     letter-spacing: normal;
-    /* text-align: center; */
+    text-align: center;
     color: #ffffff;
 }
 
@@ -181,6 +182,6 @@ img.Logo {
 
 @media (max-width: 768px) {
     html {
-        font-size: 45%;
+        font-size: 48%;
     }
 }
