Build UI login bug fixing 3

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 img.Logo {
     width: 18.8rem;
     height: auto;
-    margin: 1rem 35% .1rem;
+    margin: 1rem 42% .1rem;
     object-fit: contain;
 }
 
@@ -91,7 +91,7 @@ img.Logo {
 
 .Rectangle-5 {
     display: flex;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     margin-bottom: 3rem;
     text-align: center;
     /* margin-top: 100rem; */
