Build UI login bug fixing 6

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img.Logo {
     height: 11.7rem;
     margin: 5rem 0 5rem;
     font-family: NunitoSans;
-    font-size: 3.0rem;
+    font-size: 3rem;
     font-weight: 800;
     font-stretch: normal;
     font-style: normal;
@@ -126,7 +126,7 @@ img.Logo {
 .Dont-have-an-accoun {
     width: 16.9rem;
     height: 2rem;
-    margin: 2.5rem 12rem 1.5rem;
+    margin: 12rem;
     opacity: 0.5;
     font-family: NunitoSans;
     font-size: 1.5rem;
